# ISE-Module-Planner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
src/: api.rs  lib.rs  storage.rs  validation.rs
src/commands/: create.rs  edit.rs  export.rs  import.rs  mod.rs  validate.rs  view.rs
src/models/: curriculum.rs  mod.rs  module.rs  plan.rs  student.rs
tests/: mod.rs
tests/commands/: common.rs  create_tests.rs  edit_tests.rs  export_tests.rs  import_tests.rs  mod.rs  validate_tests.rs  view_tests.rs
tests/models/: curriculum_test.rs  mod.rs  module_registry_test.rs  module_test.rs  plan_test.rs  student_test.rs
