[package]
name = "module_planner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = "4.5.32"
colored = "3.0.0"
comfy-table = "7.1.4"
directories = "6.0.0"
dialoguer = "0.11.0"
env_logger = "0.11.7"
futures = "0.3.31"
log = "0.4.26"
mockall = "0.13.1"
reqwest = "0.12.14"
ron = "0.8.1"
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "2.0.12"
tokio = "1.44.1"
tui = "0.19.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10.1"
assert_fs = "1.1.1"
predicates = "3.1.0"
